--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>test</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Chris Zawora</title>
+	</head>
+	<body>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>H1</h1>
+				<p>p</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:christopher.zawora@gmail.com">email</a></li>
+        		<li><a href="https://github.com/czawora">github.com/czawora</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
