--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1>H1</h1>
-				<p>p</p>
+        		<h1>Chris Zawora</h1>
+				<p>I am a masters student in economics at CUNY John Jay College. 
+					My current interests include the economics of climate change and
+					monetary theory and history. I have a background in computer science
+					 and experience working as a software developer and data analyst in bioinformatics,
+					  neuroscience, and voting reform focused 
+					 ranked choice voting.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:christopher.zawora@gmail.com">email</a></li>
+        		<li>christopher.zawora@gmail.com</li>
         		<li><a href="https://github.com/czawora">github.com/czawora</a></li>
 			</ul>
 		</footer>
