--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 					My current interests include the economics of climate change and
 					monetary theory and history. I have a background in computer science
 					 and experience working as a software developer and data analyst in bioinformatics,
-					  neuroscience, and voting reform focused 
+					  neuroscience, and voting reform focused on
 					 ranked choice voting.</p>
     		</div><!-- /.blurb -->
+			<hr/>
+			<div class="projects">
+				<h3>Projects</h3>
+			</div>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
