--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     		</div><!-- /.blurb -->
 			<hr/>
 			<div class="projects">
-				<h3>Projects</h3>
+				<h2>Projects</h2>
+				<ul>
+					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="">[link]</a></li>
+				</ul>
 			</div>
 		</div><!-- /.container -->
 		<footer>
