--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="projects">
 				<h2>Projects</h2>
 				<ul>
-					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="">[link]</a></li>
+					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="color_twoCond_diff/README.html">[readme]</a></li>
 				</ul>
 			</div>
 		</div><!-- /.container -->
