Pulled down update to submodule_dir

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="projects">
 				<h2>Projects</h2>
 				<ul>
-					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="https://github.com/czawora/color_twoCond_diff">[readme]</a></li>
+					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
 				</ul>
 			</div>
 		</div><!-- /.container -->
