--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 				<ul>
 					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
 				</ul>
+				<ul>
+					<li>Gene Coexpression Network Analysis in Wild Strawberry (can load slowly) <a href="http://159.203.72.198:3838/fvesca/">[Shiny App]</a><a href="https://pubmed.ncbi.nlm.nih.gov/29991484/">[Publication]</a></li>
+				</ul>
+				<ul>
+					<li>Ranked Choice Voting Record Analysis<a href="https://github.com/fairvotereform/rcv_cruncher">[github]</a></li>
+				</ul>
 			</div>
 		</div><!-- /.container -->
 		<footer>
