--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     		<div class="blurb">
         		<h1>Chris Zawora</h1>
 				<p>I am a masters student in economics at CUNY John Jay College. 
-					My current interests include the economics of climate change and
+					My current interests include the economics of climate change, production networks, and
 					monetary theory and history. I have a background in computer science
 					 and experience working as a software developer and data analyst in bioinformatics,
 					  neuroscience, and voting reform focused on
