--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<p>I am a masters student in economics at CUNY John Jay College. 
 					My current interests include the economics of climate change, production networks, and
 					monetary theory and history. I have a background in computer science
-					 and experience working as a software developer and data analyst in bioinformatics,
+					 and experience working as a software developer (primarily using Python) and data analyst (primarily using R) in bioinformatics,
 					  neuroscience, and voting reform focused on
 					 ranked choice voting.</p>
     		</div><!-- /.blurb -->
