--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			<div class="projects">
 				<h2>Projects</h2>
 				<ul>
-					<li>Working Memory Analysis with Bayesian Hierachical Model <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
+					<li>Working Memory Analysis with Bayesian Hierachical Model (R) <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
 				</ul>
 				<ul>
-					<li>Gene Coexpression Network Analysis in Wild Strawberry <a href="http://159.203.72.198:3838/fvesca/">[Shiny App (can load slowly)]</a> <a href="https://pubmed.ncbi.nlm.nih.gov/29991484/">[Publication]</a></li>
+					<li>Gene Coexpression Network Analysis in Wild Strawberry (R) <a href="http://159.203.72.198:3838/fvesca/">[Shiny App (may load slowly)]</a> <a href="https://pubmed.ncbi.nlm.nih.gov/29991484/">[Publication]</a></li>
 				</ul>
 				<ul>
-					<li>Ranked Choice Voting Record Analysis <a href="https://github.com/fairvotereform/rcv_cruncher">[github]</a></li>
+					<li>Ranked Choice Voting Record Analysis (Python) <a href="https://github.com/fairvotereform/rcv_cruncher">[github]</a></li>
 				</ul>
 			</div>
 		</div><!-- /.container -->
