--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 			<div class="projects">
 				<h2>Projects</h2>
 				<ul>
+					<li>In Progress: Analysis of Systemically Significant Prices in the Postwar 20th Century US Economy using Input-Output Models (R) <a href="https://github.com/czawora/US-IO-SSP-analysis">[github]</a></li>
+				</ul>
+				<ul>
 					<li>Working Memory Analysis with Bayesian Hierachical Model (R) <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
 				</ul>
 				<ul>
