--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Chris Zawora</h1>
-				<p>I am a masters student in economics at CUNY John Jay College. 
-					My current interests include the economics of climate change, production networks, and
+				<p>I recently completed my masters degree in economics at CUNY John Jay College. 
+					My current interests include the economics of climate change and energy, production networks, and
 					monetary theory and history. I have a background in computer science
 					 and experience working as a software developer (primarily using Python) and data analyst (primarily using R) in bioinformatics,
 					  neuroscience, and voting reform focused on
@@ -19,7 +19,7 @@
 			<div class="projects">
 				<h2>Projects</h2>
 				<ul>
-					<li>In Progress: Analysis of Systemically Significant Prices in the Postwar 20th Century US Economy using Input-Output Models (R) <a href="https://github.com/czawora/US-IO-SSP-analysis">[github]</a></li>
+					<li>Analysis of Systemically Significant Prices in the Postwar 20th Century US Economy using Input-Output Models (R) <a href="https://github.com/czawora/US-IO-SSP-analysis">[github]</a></li>
 				</ul>
 				<ul>
 					<li>Working Memory Analysis with Bayesian Hierachical Model (R) <a href="https://github.com/czawora/color_twoCond_diff">[github]</a></li>
