--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     		<ul>
         		<li>christopher.zawora@gmail.com</li>
         		<li><a href="https://github.com/czawora">github.com/czawora</a></li>
-			</ul>
+			<li><a href="https://www.linkedin.com/in/christopher-zawora-56702168/">LinkedIn</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
