--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Chris Zawora</h1>
-				<p>I recently completed my masters degree in economics at CUNY John Jay College. 
+				<p>I recently completed my masters degree in economics at CUNY John Jay College. I currently work as the wholesale electricity market analyst for the Western Energy Markets Body of State Regulators.
 					My current interests include the economics of climate change and energy, production networks, and
-					monetary theory and history. I have a background in computer science
-					 and experience working as a software developer (primarily using Python) and data analyst (primarily using R) in the fields of economic policy, bioinformatics,
+					monetary theory and history. I also have a background in computer science
+					 and experience working as a software developer and data analyst (using Python and R) in the fields of economic policy, bioinformatics,
 					  neuroscience, and voting reform focused on
 					 ranked choice voting.</p>
     		</div><!-- /.blurb -->
