--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Chris Zawora</h1>
-				<p>I recently completed my masters degree in economics at CUNY John Jay College. I currently work as the wholesale electricity market analyst for the Western Energy Markets Body of State Regulators.
+				<p>I recently completed my masters degree in economics at CUNY John Jay College. I currently work as the wholesale electricity market analyst for the Western Energy Markets Body of State Regulators where I focus on market design developments in the CAISO's expanding regional market.
 					My current interests include the economics of climate change and energy, production networks, and
 					monetary theory and history. I also have a background in computer science
 					 and experience working as a software developer and data analyst (using Python and R) in the fields of economic policy, bioinformatics,
